--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>30</y>
+      <y>40</y>
       <width>261</width>
-      <height>111</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="title">
@@ -30,7 +30,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>70</y>
+       <y>110</y>
        <width>80</width>
        <height>25</height>
       </rect>
@@ -42,8 +42,8 @@
     <widget class="QPushButton" name="floorPanelDownButton">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>70</y>
+       <x>140</x>
+       <y>110</y>
        <width>80</width>
        <height>25</height>
       </rect>
@@ -75,89 +75,27 @@
       <string>Floor</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QGroupBox" name="ElevatorPanelGroupBox">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>150</y>
-      <width>261</width>
-      <height>151</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Elevator Panel</string>
-    </property>
-    <widget class="QComboBox" name="ElevatorPanelCarComboBox">
+    <widget class="QLabel" name="floorPanelDestFloorLabel">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>30</y>
-       <width>72</width>
-       <height>25</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QComboBox" name="ElevatorPanelFloorComboBox">
-     <property name="geometry">
-      <rect>
-       <x>160</x>
+       <x>40</x>
        <y>70</y>
-       <width>72</width>
-       <height>25</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="ElevatorPanelCarLabel">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>30</y>
-       <width>54</width>
+       <width>71</width>
        <height>17</height>
       </rect>
      </property>
      <property name="text">
-      <string>Car#</string>
+      <string>Dest. Floor</string>
      </property>
     </widget>
-    <widget class="QLabel" name="ElevatorPanelFloorLabel">
+    <widget class="QComboBox" name="floorPanelDestFloorComboBox">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>140</x>
        <y>70</y>
-       <width>54</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Floor#</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="ElevatorPanelPushButton">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>110</y>
-       <width>80</width>
+       <width>72</width>
        <height>25</height>
       </rect>
-     </property>
-     <property name="text">
-      <string>Push</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="ElevatorPanelHelpButton">
-     <property name="geometry">
-      <rect>
-       <x>150</x>
-       <y>110</y>
-       <width>80</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Help</string>
      </property>
     </widget>
    </widget>
@@ -166,7 +104,7 @@
      <rect>
       <x>420</x>
       <y>320</y>
-      <width>201</width>
+      <width>301</width>
       <height>131</height>
      </rect>
     </property>
@@ -223,6 +161,19 @@
      </property>
      <property name="text">
       <string>Door Block</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="EmergencyHelpButton">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>30</y>
+       <width>80</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Help</string>
      </property>
     </widget>
    </widget>
