--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,30 +26,17 @@
     <property name="title">
      <string>Floor Panel</string>
     </property>
-    <widget class="QPushButton" name="floorPanelUpButton">
+    <widget class="QPushButton" name="floorPanelButton">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>30</x>
        <y>110</y>
-       <width>80</width>
+       <width>191</width>
        <height>25</height>
       </rect>
      </property>
      <property name="text">
-      <string>up</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="floorPanelDownButton">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>110</y>
-       <width>80</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>down</string>
+      <string>input</string>
      </property>
     </widget>
     <widget class="QComboBox" name="floorPanelComboBox">
