--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -185,6 +185,31 @@
        <height>25</height>
       </rect>
      </property>
+     <item>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </item>
     </widget>
     <widget class="QComboBox" name="SettingsElevatorComboBox">
      <property name="geometry">
@@ -195,6 +220,31 @@
        <height>25</height>
       </rect>
      </property>
+     <item>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </item>
     </widget>
     <widget class="QLabel" name="SettingsFloorsLabel">
      <property name="geometry">
